@@ -314,6 +314,7 @@ exo_md5_digest_get_type
 <TITLE>String Utility Functions</TITLE>
 exo_str_elide_underscores
 exo_str_is_equal
+exo_str_replace
 exo_strndupv
 exo_intern_string
 exo_intern_static_string
