@@ -9,12 +9,10 @@ Miscelleanous extensions to the Gtk+ library.
 
 </para>
 
-
 <!-- ##### SECTION See_Also ##### -->
 <para>
 
 </para>
-
 
 <!-- ##### SECTION Stability_Level ##### -->
 Stable
