@@ -36,6 +36,17 @@ Stable
 @Returns: 
 
 
+<!-- ##### FUNCTION exo_str_replace ##### -->
+<para>
+
+</para>
+
+@str: 
+@pattern: 
+@replacement: 
+@Returns: 
+
+
 <!-- ##### FUNCTION exo_strndupv ##### -->
 <para>
 
