@@ -232,6 +232,7 @@ exo_pango_layout_set_text_ellipsized
 #if IN_SOURCE(__EXO_STRING_C__)
 exo_str_elide_underscores
 exo_str_is_equal
+exo_str_replace
 exo_strndupv
 exo_intern_string
 exo_intern_static_string
