@@ -1,3 +1,9 @@
+2005-12-05	Benedikt Meurer <benny@xfce.org>
+
+	* tests/test-exo-string.c, docs/reference/, exo/exo.symbols,
+	  exo/exo-string.{c,h}, tests/Makefile.am: Add new utility function
+	  exo_str_replace().
+
 2005-12-04	Benedikt Meurer <benny@xfce.org>
 
 	* HACKING: Add reminder to increment library major version whenever
